--- a/cmd/cli/templates/mailer/mail.html.tmpl
+++ b/cmd/cli/templates/mailer/mail.html.tmpl
@@ -1,11 +1,10 @@
 {{define "body"}}
     <!doctype html>
-    <html lang="">
+    <html>
 
     <head>
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title></title>
     </head>
 
     <body>
