--- a/cmd/cli/templates/mailer/password-reset.html.tmpl
+++ b/cmd/cli/templates/mailer/password-reset.html.tmpl
@@ -1,18 +1,17 @@
 {{define "body"}}
     <!doctype html>
-    <html lang="">
+    <html>
 
     <head>
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title></title>
     </head>
 
     <body>
     <p>Hello:</p>
-    <p>You recently requested a link to reset you password.</p>
+    <p>You recently requested a  link to reset your password.</p>
     <p>Visit the link below to get started. Note that the link expires in 60 minutes.</p>
-    <p><a href="{{.Link}}">Click here to reset your password</a> </p>
+    <p><a href="{{.Link}}">Click here to reset your password</a>
     </body>
 
     </html>
